--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
          
         <footer>
         </footer>
-        <script src="/ js/app.js"></script>
+        <script src="./ js/app.js"></script>
     </body>
 </html>
