--- a/index.html
+++ b/index.html
@@ -35,6 +35,51 @@
                     <li> make my own bussiness</li>
                     <li> get a car</li>
                   </ol>
+                  <div class="top-ten">
+                    <h6>Top Ten countries </h6>
+                    <ul>
+                      <li>
+                        &#8226; Germany
+
+                      </li>
+                      <li>
+                        &#8226; Amman
+
+                      </li>
+                      <li>
+                        &#8226; palestine
+
+                      </li>
+                      <li>
+                        &#8226; Lebenon
+
+                      </li>
+                      <li>
+                        &#8226; Italy
+
+                      </li>
+                      <li>
+                        &#8226; Maldeef
+
+                      </li>
+                      <li>
+                        &#8226; US
+
+                      </li>
+                      <li>
+                        &#8226; London
+
+                      </li>
+                      <li>
+                        &#8226; EGYPT
+
+                      </li>
+                      <li>
+                        &#8226; Syria
+
+                      </li>
+                    </ul>
+                  </div>
 
                 <span>   <a href="mailto:remah.massri@gmail.com">Email Remah!</a>
                 </span>
